# interval_frame

./: README.md  pyproject.toml
interval_frame/: constants.py  groupby_join_result.py  helper_ops.py  overlapping_intervals.py
tests/: pyproject.toml
tests/property/: generate_intervals.py  helpers.py  test_join.py  test_overlapping_intervals.py
tests/unit/: test_join.py  test_overlapping_intervals.py
