[project]
name = "interval_frame"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "polars"
]


[project.optional-dependencies]
dev = ["pyranges", "pytest", "hypothesis", "bioframe", "ruff"]

[tool.ruff]
line-length = 120
select = ["B", "E", "F"]
